--- a/brd-android/kyc/src/main/res/values/strings.xml
+++ b/brd-android/kyc/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="AccountVerification.Title">Account Verification</string>
-    <string name="AccountVerification.InfoText">What is this?</string>
+    <string name="AccountVerification.InfoText"><u>What is this?</u></string>
     <string name="AccountVerification.BasicPlan.Title">Basic</string>
     <string name="AccountVerification.BasicPlan.CheckListItem1">Personal information</string>
     <string name="AccountVerification.BasicPlan.Tag">Account limit: $1,000/day ($10,000 lifetime)</string>
